@@ -10,7 +10,7 @@ def load():
     f.close()
     for s in lines:
         if not s.startswith("=") and not s == "":
-            l = s.replace(" ","").split(":")
+            l = s.replace(" ","").split(":",1)
             if l[1].isdigit():
                 l[1] = int(l[1])
             elif l[1].lower() == "yes":
