@@ -2,19 +2,21 @@
 hive_number: 2
 walkspeed: 28
 gifted_vicious_bee: yes
+enable_discord_webhook: no
+discord_webhook_url:
 
 ===Gathering===
 gather_enable: yes
-gather_field: pineapple
+gather_field: pinetree
 gather_pattern: e_lol
 gather_size: m
-gather_width: 3
-gather_time:0
+gather_width: 2
+gather_time:1
 pack:95
-before_gather_turn: none
+before_gather_turn: left
 turn_times: 2
 return_to_hive:walk
 whirligig_slot: 0
 
 ===Kills===
-stump_snail: yes
+stump_snail: no
